--- a/contrib/debian/changelog
+++ b/contrib/debian/changelog
@@ -1,4 +1,4 @@
-novacoin (0.4.0~dfsg-1) unstable; urgency=low
+hashcoin (0.1.0~dfsg-1) unstable; urgency=low
 
   [ Balthazar ]
   * Initial release.
