--- a/contrib/debian/manpages/electriccoind.1
+++ b/contrib/debian/manpages/electriccoind.1
@@ -1,19 +1,19 @@
-.TH HASHCOIND "7" "April 2013" "hashcoind 3.19" 
+.TH ELECTRICCOIND "7" "April 2013" "electriccoind 0.1" 
 .SH NAME
-hashcoind \- peer-to-peer network based digital currency
+electriccoind \- peer-to-peer network based digital currency
 .SH SYNOPSIS
-hashcoin [options] <command> [params]  
+electriccoin [options] <command> [params]  
 .TP
-hashcoin [options] help <command> - Get help for a command
+electriccoin [options] help <command> - Get help for a command
 .SH DESCRIPTION
-This  manual page documents the hashcoind program. HashCoin is a peer-to-peer digital currency. Peer-to-peer (P2P) means that there is no central authority to issue new money or keep track of transactions. Instead, these tasks are managed collectively by the nodes of the network. Advantages:
+This  manual page documents the electriccoind program. ElectricCoin is a peer-to-peer digital currency. Peer-to-peer (P2P) means that there is no central authority to issue new money or keep track of transactions. Instead, these tasks are managed collectively by the nodes of the network. Advantages:
 
-HashCoins can be sent easily through the Internet, without having to trust middlemen. Transactions are designed to be irreversible. Be safe from instability caused by fractional reserve banking and central banks. The limited inflation of the HashCoin system’s money supply is distributed evenly (by CPU power) throughout the network, not monopolized by banks.
+ElectricCoins can be sent easily through the Internet, without having to trust middlemen. Transactions are designed to be irreversible. Be safe from instability caused by fractional reserve banking and central banks. The limited inflation of the ElectricCoin system’s money supply is distributed evenly (by CPU power) throughout the network, not monopolized by banks.
 
 .SH OPTIONS
 .TP
 \fB\-conf=\fR<file>
-Specify configuration file (default: HashCoin.conf)
+Specify configuration file (default: ElectricCoin.conf)
 .TP
 \fB\-gen\fR
 Generate coins
@@ -84,14 +84,14 @@ This help message
 \fBbackupwallet 'destination'\fR
 Safely copies *wallet.dat* to 'destination', which can be a directory or a path with filename.
 .TP
-\fBgetaccount 'hashcoinaddress'\fR
+\fBgetaccount 'electriccoinaddress'\fR
 Returns the account associated with the given address.
 .TP
-\fBsetaccount 'hashcoinaddress' ['account']\fR
+\fBsetaccount 'electriccoinaddress' ['account']\fR
 Sets the ['account'] associated with the given address. ['account'] may be omitted to remove an address from ['account'].
 .TP
 \fBgetaccountaddress 'account'\fR
-Returns a new hashcoin address for 'account'.
+Returns a new electriccoin address for 'account'.
 .TP
 \fBgetaddressesbyaccount 'account'\fR
 Returns the list of addresses associated with the given 'account'.
@@ -112,7 +112,7 @@ Returns the number of connections to other nodes.
 Returns the proof-of-work difficulty as a multiple of the minimum difficulty.
 .TP
 \fBgetgenerate\fR
-Returns boolean true if server is trying to generate hashcoins, false otherwise.
+Returns boolean true if server is trying to generate electriccoins, false otherwise.
 .TP
 \fBsetgenerate 'generate' ['genproclimit']\fR
 Generation is limited to ['genproclimit'] processors, -1 is unlimited.
@@ -124,13 +124,13 @@ Returns a recent hashes per second performance measurement while generating.
 Returns an object containing server information.
 .TP
 \fBgetnewaddress 'account'\fR
-Returns a new hashcoin address for receiving payments. If 'account' is specified (recommended), it is added to the address book so payments received with the address will be credited to 'account'.
+Returns a new electriccoin address for receiving payments. If 'account' is specified (recommended), it is added to the address book so payments received with the address will be credited to 'account'.
 .TP
 \fBgetreceivedbyaccount 'account' ['minconf=1']\fR
 Returns the total amount received by addresses associated with 'account' in transactions with at least ['minconf'] confirmations.
 .TP
-\fBgetreceivedbyaddress 'hashcoinaddress' ['minconf=1']\fR
-Returns the total amount received by 'hashcoinaddress' in transactions with at least ['minconf'] confirmations.
+\fBgetreceivedbyaddress 'electriccoinaddress' ['minconf=1']\fR
+Returns the total amount received by 'electriccoinaddress' in transactions with at least ['minconf'] confirmations.
 .TP
 \fBgettransaction 'txid'\fR
 Returns information about a specific transaction, given hexadecimal transaction ID.
@@ -179,26 +179,26 @@ Returns a list of the last ['count'] transactions for 'account' - for all accoun
 \fBmove <'fromaccount'> <'toaccount'> <'amount'> ['minconf=1'] ['comment']\fR
 Moves funds between accounts.
 .TP
-\fBsendfrom* <'account'> <'hashcoinaddress'> <'amount'> ['minconf=1'] ['comment'] ['comment-to']\fR
-Sends amount from account's balance to 'hashcoinaddress'. This method will fail if there is less than amount hashcoins with ['minconf'] confirmations in the account's balance (unless account is the empty-string-named default account; it behaves like the *sendtoaddress* method). Returns transaction ID on success.
+\fBsendfrom* <'account'> <'electriccoinaddress'> <'amount'> ['minconf=1'] ['comment'] ['comment-to']\fR
+Sends amount from account's balance to 'electriccoinaddress'. This method will fail if there is less than amount electriccoins with ['minconf'] confirmations in the account's balance (unless account is the empty-string-named default account; it behaves like the *sendtoaddress* method). Returns transaction ID on success.
 .TP     
-\fBsendtoaddress 'hashcoinaddress' 'amount' ['comment'] ['comment-to']\fR
-Sends amount from the server's available balance to 'hashcoinaddress'. amount is a real and is rounded to the nearest 0.01. Returns transaction id on success.
+\fBsendtoaddress 'electriccoinaddress' 'amount' ['comment'] ['comment-to']\fR
+Sends amount from the server's available balance to 'electriccoinaddress'. amount is a real and is rounded to the nearest 0.01. Returns transaction id on success.
 .TP    
 \fBstop\fR
-Stops the hashcoin server.
+Stops the electriccoin server.
 .TP    
-\fBvalidateaddress 'hashcoinaddress'\fR
-Checks that 'hashcoinaddress' looks like a proper hashcoin address. Returns an object containing:
+\fBvalidateaddress 'electriccoinaddress'\fR
+Checks that 'electriccoinaddress' looks like a proper electriccoin address. Returns an object containing:
 
     "isvalid" : true or false.
     "ismine"  : true if the address is in the server's wallet.
-    "address" : hashcoinaddress.
+    "address" : electriccoinaddress.
 
     *note: ismine and address are only returned if the address is valid.
 
 .SH "SEE ALSO"
-HashCoin.conf(5)
+ElectricCoin.conf(5)
 .SH AUTHOR
 This manual page was written by Micah Anderson <micah@debian.org> for the Debian system (but may be used by others). Permission is granted to copy, distribute and/or modify this document under the terms of the GNU General Public License, Version 3 or any later version published by the Free Software Foundation.
 
