--- a/doc/README
+++ b/doc/README
@@ -1,6 +1,6 @@
-ElectricCoin 0.1 BETA
+SoccerCoin 0.1 BETA
 
-Copyright (c) 2013 ElectricCoin Developers
+Copyright (c) 2013 SoccerCoin Developers
 Copyright (c) 2011-2012 PPCoin Developers
 Distributed under the MIT/X11 software license, see the accompanying
 file license.txt or http://www.opensource.org/licenses/mit-license.php.
@@ -11,7 +11,7 @@ cryptographic software written by Eric Young (eay@cryptsoft.com).
 
 Intro
 -----
-ElectricCoin is a free open source project derived from Bitcoin, with
+SoccerCoin is a free open source project derived from Bitcoin, with
 the goal of providing a long-term energy-efficient scrypt-based crypto-currency.
 Built on the foundation of Bitcoin and PPCoin, innovations such as proof-of-stake
 help further advance the field of crypto-currency.
